<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity"
    style="@style/AppTheme.AppBarOverlay">


    <ImageView
        android:id="@+id/iv_applogo"
        android:layout_width="120dp"
        android:layout_height="109dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="129dp"
        android:backgroundTint="@color/colorSecondaryDark"
        android:contentDescription="@string/app_name"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moviep" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email"
        android:layout_width="365dp"
        android:layout_height="64dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="38dp"
        android:hint="@string/email_label"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_applogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_email"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_password"
        android:layout_width="369dp"
        android:layout_height="59dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="39dp"
        android:hint="@string/password_label"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:endIconMode="password_toggle"
        app:endIconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="392dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="365dp"
        android:layout_height="51dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="23dp"
        android:backgroundTint="@color/colorSecondary"
        android:elevation="10dp"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotpassword" />

    <TextView
        android:id="@+id/tv_forgotpassword"
        android:layout_width="368dp"
        android:layout_height="17dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="82dp"
        android:text="Forgot Password?"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_password" />

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/no_account_yet_create_one"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="16dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="149dp"
        android:text="MY MOVIE MEMOIR"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_applogo" />

</androidx.constraintlayout.widget.ConstraintLayout>
